fix(OpenClosedBox.jsx) open / close on overflow / no overflow

--- a/src/components/parts/OpenCloseBox/OpenCloseBox.css
+++ b/src/components/parts/OpenCloseBox/OpenCloseBox.css
@@ -125,17 +125,18 @@
 	height: 100%; 
 }
 
-.content-container-closing-y {
+.content-container-closing-y,
+.content-container-closed {
 	height: 0 !important;
 	min-height: 0;
   overflow: hidden;
   max-width: 100%; 
 }
-
+ 
 .content-container-opening-x-overflow {
 	height: 1px !important;
 	min-height: 0;
-	/*overflow: hidden;*/
+	overflow: hidden;
 	visibility: hidden;
 }
 
@@ -147,9 +148,13 @@
 }
 
 .content-container-opening-y {
-	overflow: hidden;   
-	min-height: 100%;
 	height: 0;
+	overflow: hidden;  
+	/* set height with js */  
+}
+  
+.content-container-open {
+
 }
 
 /*.content-container-closing-overflow {
